Bug 160190 - Navigator looses the ability to select and track shapes and objects after formula or OLE object insert
Summary: Navigator looses the ability to select and track shapes and objects after for...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
4.3 all versions
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: Navigator
  Show dependency treegraph
 
Reported: 2024-03-13 23:37 UTC by Jim Raykowski
Modified: 2024-04-12 16:50 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Raykowski 2024-03-13 23:37:47 UTC
After inserting a formula or OLE object, Navigator tracking of selected objects and selection of objects selected in the Navigator ceases to work.

Steps to reproduce with patch to fix Bug 160093 installed:

test file - https://bugs.documentfoundation.org/attachment.cgi?id=193024 

1. Open the linked test file or a Draw or Impress file that has some shapes and objects
2. Click on shapes and objects in a page/slide and notice how they are tracked by the Navigator
3. Click on some shapes and object entries in the Navigator and notice how they are selected in the page/slide
4. Insert a formula object or OLE object (Menu > Insert > OLE Object... > Formula Object... or OLE Object...)

Result: Navigator tracking of selected objects and object selection by selecting in the Navigator stops.

Additional: Object (not unnamed shapes) selection from the Navigator has been available since at least Version 4.3 by double clicking on the object name entry in the Navigator with the same behavior of ceasing to work after a formula or OLE object insert.
Comment 1 Jim Raykowski 2024-03-14 01:09:15 UTC
Proposed patch:
https://gerrit.libreoffice.org/c/core/+/164797
Comment 2 Stéphane Guillou (stragu) 2024-03-14 04:48:26 UTC
Confirmed in LO 7.4.0.3 as well as a local build that has 2d88ea62d4b6663cf8839e5484e2ae8042112f81.
Comment 3 Commit Notification 2024-04-10 16:48:54 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/64f1fbc4a66715aa616ffeff1eb612393fa9fba3

tdf#160190 Fix selection stops working in sidebar SdNavigator

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Jim Raykowski 2024-04-10 16:52:31 UTC
Finally settled on a way to resolve this.

Left out the UI test until further understanding of why the sleeps are required.
Comment 5 Stéphane Guillou (stragu) 2024-04-12 04:56:17 UTC
Thanks Jim, fix verified in:

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d5dcc9de8ebce5d14be89ddeb6606ef0aeebf7a9
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded

Xisco, copying you in just in case you have an idea about the now-removed test that needed sleeps:

https://gerrit.libreoffice.org/c/core/+/164797/5/sd/qa/uitest/impress_tests2/tdf160190.py

I note that in 7.6 and 24.2, there's a delay between clicking the object and the Navigator highlighting it, feels like 1 second. It's something I had noticed before, and I felt like reporting that sluggishness.
In the trunk build that includes your fix, the delay is gone.
Maybe related?
Comment 6 Jim Raykowski 2024-04-12 16:50:04 UTC
(In reply to Stéphane Guillou (stragu) from comment #5)
> I note that in 7.6 and 24.2, there's a delay between clicking the object and
> the Navigator highlighting it, feels like 1 second. It's something I had
> noticed before, and I felt like reporting that sluggishness.
> In the trunk build that includes your fix, the delay is gone.
> Maybe related?
Probably this is the patch commit that solved some of the sluggishness you notice:
https://gerrit.libreoffice.org/c/core/+/165151

The patch doesn't address the delay in updating the Navigator when a slide is selected from the slide sorter.